Bug 9900:Defsel Properties - New screen shape is not consistent with rest of product on widescreen monitors
Small change to CSS that was preventing the vertical scrollbar to appear

--- a/Web Apps/DMI.NET/DMI.NET/Content/Site.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/Site.css
@@ -613,7 +613,7 @@ margin:15px 0 5px 0;
 }
 
 #divPopupReportDefinition .ui-jqgrid-bdiv {
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 .ui-dialog .ui-dialog-buttonpane {
